# backend/openapi.json
@@ -263,6 +263,29 @@
         ]
       }
     },
+    "/api/v1/products/{id}/image": {
+      "post": {
+        "operationId": "ProductsController_uploadImage",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Products"
+        ]
+      }
+    },
     "/api/v1/orders": {
       "post": {
         "operationId": "OrdersController_create",
